--- a/leagues/templates/leagues/index.html
+++ b/leagues/templates/leagues/index.html
@@ -1,40 +1,12 @@
-<!DOCTYPE html>
-{% load static %}
-
-<html lang="en">
-<head>
-    <meta name="theme-color" content="#646464">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg' %}" color="#5bbad5">
-    <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="{% static 'browserconfig.xml' %}">
-    <meta name="theme-color" content="#ffffff">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Phoenix Comics Leagues</title>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'leagues/style.css' %}"/>
-</head>
-
-<body>
-<!-- Compiled and minified JavaScript -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-<div class="halign"><h1><a href="/modern">Modern</a> // <a href="/legacy">Legacy</a></h1></div>
+{% extends 'leagues/generic_base.html' %}
+{% block content %}
 <div class="container">
     <div class="row">
-        <div class="col s12 m10 offset-m1">
-            <div class="card grey darken-3">
-                <div class="card-content white-text">
-                    <span class="card-title" style="text-align: center">What are Phoenix Leagues?</span>
-                    <p style="text-align: center"><a href="https://www.facebook.com/PhoenixComics/" style="color: antiquewhite">Phoenix
+        <div class="col">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title">What are Phoenix Leagues?</h2>
+                    <p class="card-text"><a href="https://www.facebook.com/PhoenixComics/">Phoenix
                         Comics NW</a> likes to add a little bit more excitement and competition to their weekly
                         events. Every night you show up to play you earn points that count towards your final score! If you're
                         interested in learning more please let us know in store or over Facebook!</p>
@@ -45,8 +17,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col s12 m8 offset-m2">
-            <table class="responsive-table centered">
+        <div class="col">
+            <table class="table">
                 <thead>
                 <tr>
                     <th>Record</th>
@@ -119,3 +91,4 @@
 </div>
 </body>
 </html>
+{% endblock %}
