--- a/leagues/templates/leagues/cedh.html
+++ b/leagues/templates/leagues/cedh.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 
-<h2 id="list_title">Phoenix Comics Modern League</h2>
+<h2 id="list_title">Phoenix Comics CEDH League</h2>
 <div class="uk-container">
 <table class="uk-table uk-table-small">
 <thead><tr>
@@ -34,5 +34,8 @@
             <p>See updated leagues anytime at: <strong><a href="/">phoenixleagues.online</a></strong></p>
         </div>
     </div>
+
+</body>
+</html>
 </div>
 {% endblock %}
