--- a/leagues/templates/leagues/index.html
+++ b/leagues/templates/leagues/index.html
@@ -1,59 +1,100 @@
-{% extends 'leagues/generic_base.html' %}
+{% extends 'base_generic.html' %}
+
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col s12 m10 offset-m1">
             <div class="card">
-                <div class="card-body">
-                    <h2 class="card-title">What are Phoenix Leagues?</h2>
-                    <p class="card-text"><a href="https://www.facebook.com/PhoenixComics/">Phoenix
+                <div class="card-content">
+                    <span class="card-title" style="text-align: center">What are Phoenix Leagues?</span>
+                    <p style="text-align: center"><a href="https://www.facebook.com/PhoenixComics/">Phoenix
                         Comics NW</a> likes to add a little bit more excitement and competition to their weekly
-                        events. Every night you show up to play you earn points that count towards your final score! If you're
+                        events. Every night you show up to play you earn points that count towards your final score! If
+                        you're
                         interested in learning more please let us know in store or over Facebook!</p>
                     <br>
-                    <p style="text-align: center">Current Leagues started on July 30th/August 2nd and will run for 8 weeks.</p>
+                    <p style="text-align: center">Current Leagues started on the 3rd (Legacy), 7th (Modern) and 9th
+                        (CEDH) of January and will run for 8 weeks.</p>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>Record</th>
-                    <th>Points</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>4 Wins</td>
-                    <td>6 Points</td>
-                </tr>
-                <tr>
-                    <td>3 Wins</td>
-                    <td>4 Points</td>
-                </tr>
-                <tr>
-                    <td>2 Wins</td>
-                    <td>2 Points</td>
-                </tr>
-                <tr>
-                    <td><strong>I showed up!</strong></td>
-                    <td><strong>1 Point!</strong></td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="col s12 m8 offset-m2">
+            <div class="card">
+                <div class="card-tabs">
+                    <ul class="tabs">
+                        <li class="tab"><a href="#modernlegacy">Modern / Legacy Point Payouts</a></li>
+                        <li class="tab"><a href="#cedh">Competitve EDH Payouts</a></li>
+                    </ul>
+                </div>
+                <div class="card-content">
+                    <div id="modernlegacy">
+                        <table class="responsive-table centered">
+                            <thead>
+                            <tr>
+                                <th>Record</th>
+                                <th>Points</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>4 Wins</td>
+                                <td>6 Points</td>
+                            </tr>
+                            <tr>
+                                <td>3 Wins</td>
+                                <td>4 Points</td>
+                            </tr>
+                            <tr>
+                                <td>2 Wins</td>
+                                <td>2 Points</td>
+                            </tr>
+                            <tr>
+                                <td><strong>I showed up!</strong></td>
+                                <td><strong>1 Point!</strong></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div id="cedh">
+                        <table class="responsive-table centered">
+                            <thead>
+                            <tr>
+                                <th>Record</th>
+                                <th>Points</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>2 Wins</td>
+                                <td>8 Points</td>
+                            </tr>
+                            <tr>
+                                <td>1 Win</td>
+                                <td>4 Points</td>
+                            </tr>
+                            <tr>
+                                <td><strong>I showed up!</strong></td>
+                                <td><strong>1 Point!</strong></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col s12 m10 offset-m1">
-            <div class="card grey darken-3">
-                <div class="card-content white-text" id="centerme">
+            <div class="card">
+                <div class="card-content" id="centerme">
                     <span class="card-title">Current Payouts:</span>
-                    <p>We pay out $1 for every player in our Monday (Modern) or Thursday (Legacy) events! Currently that's:</p>
-                    <h5>${{ modpool }} <em>Modern</em> prize pool ({{ modern_players }} unique players)</h5>
-                    <h5>${{ legpool }} <em>Legacy</em> prize pool ({{ legacy_players }} unique players)</h5>
+                    <p>We add $1 worth of prizing for every player in our Monday (Modern),  Tuesday (Competitive EDH) and Thursday (Legacy) events! Currently
+                        that's:</p>
+                    <h5>${{ modpool|default:0 }} <em>Modern</em> prize pool ({{ modern_players|default:0 }} unique players)</h5>
+                    <h5>${{ legpool|default:0 }} <em>Legacy</em> prize pool ({{ legacy_players|default:0 }} unique players)</h5>
+                    <h5>${{ cedhpool|default:0 }} <em>CEDH</em> prize pool ({{ cedh_players|default:0 }} unique players)</h5>
                 </div>
             </div>
         </div>
@@ -61,8 +102,8 @@
 
     <div class="row">
         <div class="col s12 m10 offset-m1">
-            <div class="card grey darken-3">
-                <div class="card-content white-text" id="centerme">
+            <div class="card">
+                <div class="card-content" id="centerme">
                     <span class="card-title">Prizing Breakdowns:</span>
                     <br>
                     <h5>Prizing structure determined by the total number of unique players!</h5>
@@ -82,13 +123,13 @@
                         <li class="tab"><a href="#120to139">120-139</a></li>
                     </ul>
                 </div>
-                <div class="card-content grey darken-2">
-                    <div id="#7-12"><ol><li>1st: 70% [Modern: {{ modpool }}</li></ol></div>
+                <div class="card-content">
+                    <div id="#7-12">
+                        <p>To Be Determined of course!</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</body>
-</html>
 {% endblock %}
