--- a/leagues/templates/leagues/personal_event.html
+++ b/leagues/templates/leagues/personal_event.html
@@ -1,30 +1,6 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta name="theme-color" content="#646464">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png'%}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png'%}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png'%}">
-    <link rel="manifest" href="{% static 'site.webmanifest'%}">
-    <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg'%}" color="#5bbad5">
-    <link rel="shortcut icon" href="{% static 'favicon.ico'%}">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="{% static 'browserconfig.xml'%}">
-    <meta name="theme-color" content="#ffffff">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Phoenix Comics Leagues</title>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'leagues/style.css' %}"/>
-</head>
-<!-- Compiled and minified JavaScript -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+{% extends 'base_generic.html' %}
 
+{% block content %}
 <div class="container">
     <div class="row">
         <div class="col s12">
@@ -33,23 +9,23 @@
         </div>
     </div>
     <div class="row">
-        <ul class="collection grey darken-3">
+        <ul class="collection">
             <div class="col s6 m4">
-                <li class="collection-item grey darken-3" id="topaccount">DCI: <strong>{{ account.dci }}</strong></li>
+                <li class="collection-item" id="topaccount">DCI: <strong>{{ account.dci }}</strong></li>
             </div>
             <div class="col s3 m4">
-                <li class="collection-item grey darken-3" id="topaccount">{{ event.format|upper }} LEAGUE POINTS: <strong>{{ league_points }}</strong> </li>
+                <li class="collection-item" id="topaccount">{{ event.format|upper }} LEAGUE POINTS: <strong>{{ league_points }}</strong> </li>
             </div>
             <div class="col s3 m4">
-                <li class="collection-item grey darken-3" id="topaccount">EVENT POINTS: <strong>{{ result.points }}</strong></li>
+                <li class="collection-item" id="topaccount">EVENT POINTS: <strong>{{ result.points }}</strong></li>
             </div>
         </ul>
     </div>
     <div class="row">
     {% for EventRound in rounds %}
         <div class="col s6 l3">
-            <div class="card small grey darken-3">
-            <div class="card-content white-text" >
+            <div class="card small">
+            <div class="card-content" >
               <span id="centerme" class="card-title">Round {{ EventRound.roundNumber }}</span>
               <p id="centerme"><br><br>{% if EventRound.opp %}vs. <a href="/user/{{ EventRound.opp }}">{{ EventRound.opp_name }}</a>{% else %}Crushed the bye.{% endif %}</p>
             </div>
@@ -61,5 +37,4 @@
     {% endfor %}
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
