--- a/leagues/templates/leagues/modern.html
+++ b/leagues/templates/leagues/modern.html
@@ -1,38 +1,42 @@
 {% extends 'base_generic.html' %}
 
 {% block content %}
-<div class="container">
-
-<h2 id="list_title">Phoenix Comics Modern League</h2>
-<div class="uk-container">
-<table class="uk-table uk-table-small">
-<thead><tr>
-    <th>#</th>
-    <th>Name</th>
-    <th>Points</th>
-</tr>
-</thead>
-<tbody>
-{% for player in player_list %}
-    <tr>
-        <td>
-            <strong>{{ player.place }}</strong>
-        </td>
-    <td>
-        <strong><a href="/user/{{ player.dci }}/">{{ player.first }} {% if player.nickname %}<q style="font-size: smaller">{{ player.nickname }}</q>{% endif %} {{ player.last }}</a></strong>
-    </td>
-    <td>
-        {{ player.points }}
-    </td>
-    </tr>
-{% endfor %}
-</tbody>
-</table></div></div>
-<div class="container">
-    <div class="uk-hidden-touch">
-        <div id="list_title">
-            <p>See updated leagues anytime at: <strong><a href="/">phoenixleagues.online</a></strong></p>
-        </div>
+  <header class="masthead text-center">
+    <h1>{{ league_name }}</h1>
+  </header>
+  <div class="container">
+      <table class="table">
+        <thead>
+        <tr>
+          <th>#</th>
+          <th>Name</th>
+          <th>Points</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for player in player_list %}
+          <tr>
+            <td>
+              <strong>{{ player.place }}</strong>
+            </td>
+            <td>
+              <strong><a href="/user/{{ player.dci }}/">{{ player.first }} {% if player.nickname %}
+                <q style="font-size: smaller">{{ player.nickname }}</q>{% endif %} {{ player.last }}</a></strong>
+            </td>
+            <td>
+              {{ player.points }}
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
     </div>
-</div>
+  </div>
+  <div class="container">
+    <div class="uk-hidden-touch">
+      <div id="list_title">
+        <p>See updated leagues anytime at: <strong><a href="/">phoenixleagues.online</a></strong></p>
+      </div>
+    </div>
+  </div>
 {% endblock %}
