--- a/leagues/templates/leagues/index.html
+++ b/leagues/templates/leagues/index.html
@@ -43,7 +43,7 @@
       </table>
       <hr>
       <h5>Competitive Commander (EDH)</h5>
-      <p>Our CEDH are hosted by DSC_1, and work a little bit different for calculating points.</p>
+      <p>Our CEDH are hosted by DSC1, and work a little bit different for calculating points.</p>
       <table class="table table-borderless">
         <thead>
           <tr>
@@ -73,6 +73,35 @@
     <div class="container">
       <h1>Payout$</h1>
       <hr class="star-light">
+      <div class="row">
+        <div class="col-lg-6 m-auto">
+          <p class="lead">We add $1 worth of prizing for every player in our Monday (Modern),  Tuesday
+            (Competitive EDH) and Thursday (Legacy) events.</p>
+          <table class="table table-borderless">
+            <thead>
+              <tr>
+                <th scope="col">Format</th>
+                <th scope="col">Unique Players</th>
+                <th scope="col">Current Prize Pool</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% if payouts %}
+              {% for format in payouts %}
+                <tr>
+                  <th scope="row">{{ format.format_name }}</th>
+                  <th scope="row">{{ format.players }}</th>
+                  <th scope="row">${{ format.prize_pool }}</th>
+                </tr>
+              {% endfor %}
+            {% else %}
+              <h3>No Currently running Leagues! <i class="fas fa-sad-tear"></i></h3>
+            {% endif %}
+            </tbody>
+          </table>
+        <p class="lead">Payouts will be determined based on attendance, talk to us in store for more info!</p>
+        </div>
+      </div>
     </div>
   </section>
 {% endblock %}
