--- a/leagues/templates/leagues/standings.html
+++ b/leagues/templates/leagues/standings.html
@@ -5,7 +5,7 @@
     <h1>{{ league_name }}</h1>
   </header>
   <div class="container">
-      <table class="table">
+      <table class="table table-hover">
         <thead>
         <tr>
           <th>#</th>
@@ -20,8 +20,8 @@
               <strong>{{ player.place }}</strong>
             </td>
             <td>
-              <strong><a href="/user/{{ player.dci }}/">{{ player.first }} {% if player.nickname %}
-                <q style="font-size: smaller">{{ player.nickname }}</q>{% endif %} {{ player.last }}</a></strong>
+              <strong>{{ player.first }} {% if player.nickname %}
+                <q style="font-size: smaller">{{ player.nickname }}</q>{% endif %} {{ player.last }}</strong>
             </td>
             <td>
               {{ player.points }}
@@ -32,11 +32,9 @@
       </table>
     </div>
   </div>
-  <div class="container">
-    <div class="uk-hidden-touch">
+  <div class="container d-none d-xl-block">
       <div id="list_title">
-        <p>See updated leagues anytime at: <strong><a href="/">phoenixleagues.online</a></strong></p>
+        <p>See updated leagues anytime at: <strong><a href="http://phoenixleagues.online">phoenixleagues.online</a></strong></p>
       </div>
-    </div>
   </div>
 {% endblock %}
