change link to something less suspicious

--- a/app/templates/leagues/index.html
+++ b/app/templates/leagues/index.html
@@ -121,7 +121,7 @@
     <footer class="bg-primary text-white text-center">
         <div>Site made with <i class="far fa-kiss-wink-heart"></i> by
           <label for="mike-link" hidden>sendto:mike.pnnr@gmail.com</label>
-            <a class="text-white" id="mike-link" href="https://youtu.be/-xKM3mGt2pE?t=14">Mike Penner</a>
+            <a class="text-white" id="mike-link" href="https://moreramnotavirus.com">Mike Penner</a>
         </div>
     </footer>
 {% endblock %}
