update a bunch of dependencies and fix some broken links

--- a/app/templates/leagues/index.html
+++ b/app/templates/leagues/index.html
@@ -56,7 +56,7 @@
       </table>
       <hr>
       <h5>Competitive Commander (EDH)</h5>
-      <p>Our CEDH are hosted by DSC1, and work a little bit different for calculating points! The main way to earn points is by winning your tables' 3-5 player game.</p>
+      <p>Our CEDH are hosted by DSC1, and work a bit different for calculating points! The main way to earn points is by winning your tables' 3-5 player game.</p>
       <table class="table table-borderless">
         <thead>
           <tr>
@@ -120,8 +120,8 @@
   </section>
     <footer class="bg-primary text-white text-center">
         <div>Site made with <i class="far fa-kiss-wink-heart"></i> by
-          <label for="mike-link" hidden>sendto:mike.pnnr@gmail.com</label>
-            <a class="text-white" id="mike-link" href="https://moreramnotavirus.com">Mike Penner</a>
+          <label for="mike-link" hidden>Developer easter egg</label>
+            <a class="text-white" id="mike-link" href="https://phever.github.io">Mike Penner</a>
         </div>
     </footer>
 {% endblock %}
