--- a/app/templates/leagues/uploads.html
+++ b/app/templates/leagues/uploads.html
@@ -1,6 +1,5 @@
 {% extends 'base_generic.html' %}
-
-{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 
 {% block content %}
   <header class="masthead bg-primary text-white text-center">
